--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
 }
 
 main{
-  margin-top: 100px;
+  position: absolute;
+  margin-top: 15%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,14 +42,14 @@ main{
   width: auto;
 }
 
-.input-field{
+.input-field {
   border: none;
   outline: none;
   border-radius: 5px;
-  height: 30px;
+  /* height: 30%; */
   width: auto;
   background-color: whitesmoke;
-  font-size: 20px;
+  font-size: 15px;
 
 }
 
@@ -61,23 +62,29 @@ button {
   border: none;
 }
 
-.fa-magnifying-glass{
+.fa-magnifying-glass {
   color: rgb(184, 146, 175);
 }
 
-.date{
+.date {
   font-size: 30px;
 }
+@media (max-width: 600px) {
+ 
+ main{
+  width: 100%;
+ }
+}
 
-.weather-info{
+.weather-info {
   font-size: 20px;
   font-weight: 600;
   color: whitesmoke;
- text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-   
-    padding: 25px;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  padding: 25px;
 }
- .degree-btn{
+
+ .degree-btn {
   display: none; 
  
 } 
@@ -92,10 +99,11 @@ button {
 
 .errorMessage{
   width: 300px;
-  position: absolute;
+  position: relative;
   top: 20%;
-  left: 30%;
-  background-color: brown;
+  color:red;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  background-color: whitesmoke;
   border-radius: 15px;
   padding: 20px;
   display: none;
