--- a/style.css
+++ b/style.css
@@ -69,12 +69,7 @@ button {
 .date {
   font-size: 30px;
 }
-@media (max-width: 600px) {
- 
- main{
-  width: 100%;
- }
-}
+
 
 .weather-info {
   font-size: 20px;
@@ -116,3 +111,12 @@ button {
 .city-temp {
   display: flex;
 }
+@media (max-width: 600px) {
+ 
+  main{
+   width: 100%;
+  }
+  .city-temp{
+    font-size: 15px;
+  }
+ }
